# GBEmulator

./: .gitignore  CMakeLists.txt  emulator
inc/cpu/: GBCpu.h  cpu.h  opcodes.def
inc/memory/: GBMemory.h
inc/utils/: log.h
src/: main.cpp
src/cpu/: cpu.cpp
